{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 17,
  "lineage": "518d20c2-2251-6001-1810-3402f3bec60e",
  "resources": [
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "aks_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a79df85c-a45e-42a2-a339-c88a5a4f2849/resourceGroups/aks-rg/providers/Microsoft.Network/networkSecurityGroups/aks_nsg",
            "location": "uksouth",
            "name": "aks_nsg",
            "resource_group_name": "aks-rg",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.azurerm_resource_group.networking"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "kube_apiserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "443",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/a79df85c-a45e-42a2-a339-c88a5a4f2849/resourceGroups/aks-rg/providers/Microsoft.Network/networkSecurityGroups/aks_nsg/securityRules/my_nsg_rule1",
            "name": "my_nsg_rule1",
            "network_security_group_name": "aks_nsg",
            "priority": 1001,
            "protocol": "Tcp",
            "resource_group_name": "aks-rg",
            "source_address_prefix": "82.31.251.163",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.azurerm_network_security_group.aks_nsg",
            "module.networking.azurerm_resource_group.networking"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/a79df85c-a45e-42a2-a339-c88a5a4f2849/resourceGroups/aks-rg/providers/Microsoft.Network/networkSecurityGroups/aks_nsg/securityRules/my_nsg_rule2",
            "name": "my_nsg_rule2",
            "network_security_group_name": "aks_nsg",
            "priority": 1002,
            "protocol": "Tcp",
            "resource_group_name": "aks-rg",
            "source_address_prefix": "82.31.251.163",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.azurerm_network_security_group.aks_nsg",
            "module.networking.azurerm_resource_group.networking"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "control_plane_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/a79df85c-a45e-42a2-a339-c88a5a4f2849/resourceGroups/aks-rg/providers/Microsoft.Network/virtualNetworks/my_vnet/subnets/my_control_plane_subnet",
            "name": "my_control_plane_subnet",
            "resource_group_name": "aks-rg",
            "virtual_network_name": "my_vnet"
          },
          "dependencies": [
            "module.networking.azurerm_resource_group.networking",
            "module.networking.azurerm_virtual_network.aks_vnet"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "worker_node_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/a79df85c-a45e-42a2-a339-c88a5a4f2849/resourceGroups/aks-rg/providers/Microsoft.Network/virtualNetworks/my_vnet/subnets/my_worker_node_subnet",
            "name": "my_worker_node_subnet",
            "resource_group_name": "aks-rg",
            "virtual_network_name": "my_vnet"
          },
          "dependencies": [
            "module.networking.azurerm_resource_group.networking",
            "module.networking.azurerm_virtual_network.aks_vnet"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "aks_vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "a94360f9-4947-4618-87d9-18873f4660a8",
            "id": "/subscriptions/a79df85c-a45e-42a2-a339-c88a5a4f2849/resourceGroups/aks-rg/providers/Microsoft.Network/virtualNetworks/my_vnet",
            "location": "uksouth",
            "name": "my_vnet",
            "resource_group_name": "aks-rg"
          },
          "dependencies": [
            "module.networking.azurerm_resource_group.networking"
          ]
        }
      ]
    }
  ]
}